# anduin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/: PACKAGING.md
packaging/linux/: anduin.desktop
packaging/macos/: Info.plist.ext
scripts/: deploy.sh  package.sh
src/: actions.rs  actions_ui.rs  app.rs  config.rs  main.rs  search.rs  shell_env.rs  shortcuts.rs  theme.rs  tree.rs  watch.rs
src/git/: cli.rs  diff.rs
src/tests/: actions_panel.rs  focus.rs  mod.rs  project_search.rs  tree.rs
src/update/: diff.rs  history.rs  mod.rs  repo.rs  search.rs
src/views/: actions_footer.rs  context_menu.rs  diff.rs  discard_confirm.rs  mod.rs  project_search.rs  shortcuts_help.rs  sidebar.rs
